app/styles/main.css
/* Space out content a bit */
body {
  height: 100%;
  display:flex;
  font-family: 'Roboto', sans-serif;
}

html, body{
  font-size:1em;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

#doc-content{
    margin:auto;
}

#view-content{
  width:960px;
  box-shadow: 0px 0px 3px 1px #9D9D9D;
}

#view-content h2{
  margin:.5em 1em .5em 0;
}

h1{
  margin:.25em 0;
}

/* Customize container */
@media (min-width: 600px) {
  .container {
    max-width: 730px;
  }
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
  padding:2em;
}

.jumbotron p{
  font-weight:500;
}

.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

.md-button{
  padding:10px;
  margin-right:5px;
  margin-bottom:5px;
}
.titleBar .md-button{
  margin-bottom:0;
}


/*Stop anchor tags with md-button from overlapping */
a.md-button{
  display: inline-block;
}

/*SideNav Styles */
md-sidenav .md-button{
  margin:0;
}
md-sidenav .md-toolbar-tools{
  padding-right:0;
}

md-toolbar{
  box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.5);
}

/* Custom Stuff */
.marketing h2{
    margin-left:1em!important;
}
.done{
  text-decoration: line-through;
}

md-icon{
  margin-top:0px;
}

.appMenu{
  padding:10px;
  margin-right:10px;
}
.titleBar{
  padding: 0 0em 0 1em;
  color: #FFF;
  background: #FFA000;
  text-shadow: 1px 1px 1px rgba(153, 67, 0, 0.73);
}
.titleBar h2{
  margin-right:1em;
}
.titleBar .md-button{
  border-radius:0;
}
.closeAppMenu{
  float:right;
}
.closeAppMenu object{
  width:24px;
}

.menu-item{
  width:100%;
  text-align:left;
  padding:12px;
  border-bottom: 1px solid #CFD8DC;
}

.selectBox select{
  padding:6px 0 4px 0;
  border:none;
  border-bottom:1px solid #ddd;
}

.selectBox{
  padding-top:25px;
}

label{
  padding:0;
}

.select-label{
  position:absolute;
  top:-25px;
}

/*Setting up messages and warning dialogue boxes*/

.hide{
  display:none;
}

.message{
  background:#C8E6C9;
  padding:.5em;
}
.warning{
  background:#E53935;
  padding:.5em;
  color:#fff;
  text-shadow: 1px 1px 2px #000;
}


#viewMessage{
  color:#263238;
  width:100%;
  text-align:center;
}
#viewMessage span{
    width:100%;
    display:block;
}

#characterForm{
  padding: 0em 1em;
  margin-top:1em;
}

/*Ability Scores styles*/
#abilityScores{

  text-align:center;
}
#abilityScores .heading{
  font-weight:600;
  color:#37474F;
  padding:1em;
}
.abilityRow{
  padding:1em;
}
.abilityRow .title, .abilityRow .modifier{
  padding-top:8px;
}
#abilityScores md-input-container{
  margin-top: -6px;
  padding-bottom:0;
}
#abilityScores .abilityRow:nth-child(even), .profStat:nth-child(even){
  background:#ECEFF1;
}

#abilityScores md-input-container input{
  width: 44px;
  height: 44px;
  margin: auto;
  text-align: center;
  border: 1px solid rgb(255,202,40);
  background: #FFF8E1;
}

/*proficiency styles*/
.profStat{
  padding:1em;
}

/*pop-up dialog styles*/
md-dialog p{
  line-height:1.5;
}
md-dialog md-content{
  padding:1em;
}
md-dialog .md-actions{
  padding:0;

}
md-dialog .md-button{
  margin:0;
  width: 100%;
}


/*Modified the label text tansform so the text doesn't shrink */
md-input-container.md-input-focused label, md-input-container.md-input-has-value label {
-webkit-transform: translate3d(0, 4px, 0) scale(1);
transform: translate3d(0px, 4px, 0) scale(1);
}

/*Angular Material does not have proper dropdowns yet. Found a link to this code on the github issues page: https://gist.github.com/yarl/b3d4b4114d82c8bb041d */

md-input-container select.md-input {
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAMAAAAoLQ9TAAAAD1BMVEUAAAB6enp6enp5eXn///+i9s37AAAAA3RSTlMAgIgilleHAAAAIklEQVR4AWOgG2BihgImmAgjhM+IUMOI4CNEGNHMYaKlKwEp5wBLyMAwGAAAAABJRU5ErkJggg==) 99% center no-repeat;
    margin: 0;
    padding: 0;
    margin-bottom: 1px;
}

md-input-container select.md-input, md-input-container input{
    height:44px;
}

md-input-container label, .selectBox label{
  font-weight:500;

}

md-input-container input, md-input-container select{
  font-size:1.1em;
  font-weight:600;
}

.selectBox label{
  color:rgba(0,0,0,0.54)!important;
}

md-input-container select.md-input:focus {
    border-bottom: 2px solid rgb(96, 125, 139) !important;
    margin-bottom: 0;
}

md-input-container select.md-input:focus::-ms-value {
    background: transparent;
    color: inherit;
}

md-input-container select.md-input::-ms-expand {
    display: none;
}

/*-End of select container styles-*/

/*Needed to remove spinners from number inputs
code from: http://css-tricks.com/snippets/css/turn-off-number-input-spinners/ */
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}



.buttondemoBasicUsage {
/** From vulcanized demo **/ }
  .buttondemoBasicUsage section {
  background: #f7f7f7;
  border-radius: 3px;
  text-align: center;
  margin: 1em;
  position: relative !important;
  padding-bottom: 10px; }
  .buttondemoBasicUsage md-content {
  margin-right: 7px; }
  .buttondemoBasicUsage section .md-button:not(.md-fab) {
  min-width: 10em; }
  .buttondemoBasicUsage section .md-button {
  display: block;
  margin: 1em;
  line-height: 25px; }
  .buttondemoBasicUsage .label {
  position: absolute;
  bottom: 5px;
  left: 7px;
  color: #ccc;
  font-size: 14px; }

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 600px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
  .jumbotron h1, .jumbotron .h1 {
    font-size: 63px;
  }

}
@media screen and (max-width: 1024px) {
  #view-content{
    width:100%;
    box-shadow:none;
  }
}
@media screen and (max-width: 600px) {
  a.md-button{
    max-width:100%;
    width:100%;
    display:block;
  }
  #doc-content{
      width:100%;
  }
  #doc-content > .ng-scope{
    width:100%;
  }
  .abilityRow .title{
    text-align:left;
  }
  #mainMenu, md-toolbar{
    height: 44px;
    min-height: 44px;
  }
  #mainMenu .md-toolbar-tools{
    padding-left:0;
  }
  .md-toolbar-tools .md-button{
    border-radius:0;
    margin:0;
  }
  #mainMenu .md-toolbar-tools .md-button{
    margin-right:1em;
  }
  .profStat{
    line-height: 2em;
  }


}

